fix: swaggers auth endpoints
